Add transects geojson
